--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,5 +1,5 @@
 name: Bug report
-description: Create a bug report to help improve [AppName]
+description: Create a bug report to help improve this repository
 labels: bug
 title: "[BUG REPORT] - "
 
