--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,5 +1,5 @@
 name: Feature Request
-description: Suggest an idea for [AppName]
+description: Suggest an idea for this repository
 labels: enhancement
 title: "[FEATURE REQUEST] - "
 
