--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -12,4 +12,4 @@ jobs:
     - uses: actions/first-interaction@v1
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
-        pr-message: "🎉 Thank you for your first pull request to the repository! We're grateful for your contribution and will review it ASAP."
+        pr-message: "Thank you for your first pull request to the repository! We're grateful for your contribution and will review it ASAP."
