--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -42,13 +42,13 @@ body:
 
   - type: dropdown
     attributes:
-      label: SO version
+      label: OS version
       options:
         - Windows 11
         - Windows 10
-        - Windows 8
-        - Windows 7
+        - Windows other
         - Debian
+        - Arch
         - Other
     validations:
       required: true
@@ -57,7 +57,7 @@ body:
     attributes:
       label: Confirmation 
       options:
-        - label: I performed a [search of the issue tracker](https://github.com/segocode/{reponame}/issues) to avoid opening a duplicate issue
+        - label: I performed a [search of the issue tracker](https://github.com/{username}/{reponame}/issues) to avoid opening a duplicate issue
           required: true
         - label: I understand that not filling out this template correctly may lead to the issue being closed
           required: true
